--- a/style.css
+++ b/style.css
@@ -42,12 +42,12 @@ body {
   position: fixed;
   top: 3rem;
   right: 3rem;
-  z-index: 1000;
-  height: 5rem;
-  width: 5rem;
-  line-height: 5rem;
+  z-index: 10;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4rem;
   border-radius: 50%;
-  font-size: 2rem;
+  font-size: 2.5rem;
   cursor: pointer;
   border:1px solid var(--secondary-color);
   box-shadow: var(--box-shadow);
@@ -134,7 +134,11 @@ body {
   padding: 0;
   width: 270px;
   height: 100px;
+  border-radius: 10px;
   background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 canvas {
